syntax = "proto3";

package transaction_verification;

service TransactionVerificationService {
    rpc VerifyTransaction (TransactionVerificationRequest) returns (TransactionVerificationResponse);
}

message TransactionVerificationRequest {
    string cardID=1;
    string card_owner=2;
}

message TransactionVerificationResponse {
    bool validationResult=1;
}
